insta/tests/snapshots/test_redaction__foo_bar.snap
---
source: tests/test_redaction.rs
expression: "Selector :: parse(\".foo.bar\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
        ],
    ],
}
