insta/tests/snapshots/test_redaction__foo_bar_range_from.snap
---
source: tests/test_redaction.rs
expression: "Selector :: parse(\".foo.bar[10:]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                Some(
                    10,
                ),
                None,
            ),
        ],
    ],
}
