insta/tests/snapshots/test_redaction__map_key_redaction.snap
---
source: tests/test_redaction.rs
expression: foo_value
---
hm:
  ? bucket: "[bucket]"
    value: 0
  : 42
btm:
  "[key]": 23
