insta/tests/snapshots/test_redaction__rounded_redaction.snap
---
source: tests/test_redaction.rs
expression: "&MyPoint { x: 1.0 / 3.0, y: 6.0 / 3.0, }"
---
{
  "x": 0.3333,
  "y": 2.0
}
