insta/tests/snapshots/test_redaction__user_json_flags.snap
---
source: tests/test_redaction.rs
expression: "&User\n{\n    id: 122, username: \"jason_doe\".to_string(), flags:\n    vec![\"zzz\".into(), \"foo\".into(), \"aha\".into(),\n    \"is_admin\".into()].into_iter().collect(),\n}"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "flags": [
    "aha",
    "foo",
    "is_admin",
    "zzz"
  ]
}
